--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta name="viewport" content="initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Mi CV</title>
 	<link rel="stylesheet" href="./src/styles/styles.css"> 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 	<main>
@@ -19,8 +22,10 @@
 						<ul>
 
 							<li class="list-item">
-								<img class="contact-icon" src="./src/images/mail-icon.png" alt="mail-icon.png">
-								<h6>alejandrovaqueralopez608@gmail.com</h6>
+								<a href="https://mail.google.com/mail/u/0/#inbox/">
+									<img class="contact-icon" src="./src/images/mail-icon.png" alt="mail-icon.png">
+									<h6>alejandrovaqueralopez608@gmail.com</h6>
+								</a>
 							</li>
 
 							<li class="list-item">
@@ -49,7 +54,7 @@
 
 					<div class="skills-container">
 						<h3>Habilidades</h3>
-						<ul>
+						<ul class="skills">
 
 							<li>
 								<div class="skill-bar">
@@ -110,6 +115,14 @@
 						</ul>
 
 					</div>
+					<div class="actual-studying">
+						<h3>Estudios actuales</h3>
+						<p>
+							Actualmente me encuentro estudiando la carrera "Profesional en Coding"
+							en la instituci&oacuten de DEVF
+						</p>
+						<img class="name" src="./src/images/logo-devf-white.0e9942b3.svg" alt="devf-icon">
+					</div>
 
 				</div>
 
@@ -119,39 +132,70 @@
 
 				<div class="main-section__container-content">
 
-					<h1>Mi CV</h1>
+					<h2>Mi CV</h2>
 					<h2>Alejandro Vaquera Lopez</h2>
 					<hr>
 
 					<div class="personal-data">
 						<h3>Programador</h3>
-						<p>Edad: 18 años.</p>
+						<p>Edad: 18 a&ntildeos.</p>
 						<p>Nacionalidad: Mexicana.</p>
-						<p>Sexo: Masculina.</p>
+						<p>Sexo: Masculino.</p>
 					</div>
 
 					<div class="personal-profile">
 						<h3>Perfil personal</h3>
 						<p>
-							Soy un programador comunicativo. Cuento con 3 años de 
+							Soy un programador comunicativo. Cuento con 3 a&ntildeos pr&aacutecticos de 
 							experiencia desarrollando proyectos en distintos lenguajes de 
-							programación, tales
+							programaci&oacuten, tales
 							como Javascript y Python, en frameworks derivados como
-							tkinter (python) y tecnologías web CSS/HTML.
+							tkinter (python) y tecnolog&iacuteas web CSS/HTML. Mis hobbies son la m&uacutesica, los
+							videojuegos y la tecnolog&iacutea.
 						</p>
 					</div>
 
 					<div class="experience">
 						<h3>Experiencia laboral</h3>
-						<div class="experience-item">
-
+						<div class="item">
+							<h3>Club Emprende M&eacutexico</h3>
+							<h6>Marketing digital | Enero 2021 - Junio 2021</h6>
+							<ul>
+								<li>Servicio al cliente.</li>
+								<li>Producci&oacuten de contenido.</li>
+								<li>Prospecci&oacuten.</li>
+								<li>Manejo de eventos masivos en vivo.</li>
+							</ul>
 						</div>
 					</div>
 
 					<div class="scholarship">
 						<h3>Historial educativo</h3>
-						<div class="scholarship-item"></div>
-						<div class="scholarship-item"></div>
+						<div class="item">
+							<h3>Secundaria General N&uacutemero 117</h3>
+							<h6>Ofim&aacutetica | Agosto 2016 - Junio 2018</h6>
+							<ul>
+								<li>Administraci&oacuten de flujo de informaci&oacuten.</li>
+								<li>Manejo de Word, Excel y Power Point.</li>
+							</ul>
+						</div>
+
+						<div class="item">
+							<h3>Centro de Estudios Tecnol&oacutegicos Industrial y de
+Servicios No. 58</h3>
+							<h6>Programaci&oacuten | Agosto 2018 - Junio 2021</h6>
+							<ul>
+								<li>Tecnolog&iacuteas de la informaci&oacuten y la comunicaci&oacuten.</li>
+								<li>Desarrollo de software de aplicaci&oacuten con programaci&oacuten
+estructurada.</li>
+								<li>Metodolog&iacuteas de desarrollo de software.</li>
+								<li>Desarrollo de aplicaciones web y de escritorio.</li>
+								<li>Bases de datos relacionales SQL.</li>
+								<li>Desarrollo de aplicaciones m&oacuteviles para Android.</li>
+								<li>Programaci&oacuten orientada a objetos.</li>
+								<li>Programaci&oacuten orientada a eventos.</li>
+							</ul>
+						</div>
 					</div>
 
 					</div>
